Enhanced toolbar UI